# derek-core

./: .gitignore  Cargo.toml  Makefile  README.md  __rust-toolchain.toml  kernel.d  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: arch.rs  clint.rs  cpu.rs  kernel.ld  lib.rs  plic.rs  print.rs  start.rs  symbols.rs  uart.rs
kernel/src/allocator/: frame_allocator.rs  frame_allocator_bug.rs  heap_allocator.rs  identifier_allocator.rs  mod.rs  resource_manager.rs
kernel/src/asm/: boot.S  kernelvec.S  macros.S  trampoline.S
kernel/src/common/: mod.rs  resource_table.rs
kernel/src/fs/: mock.rs
kernel/src/mm/: address_space.rs  arithmetics.rs  layout.rs  memory.rs  mod.rs  page_table.rs
kernel/src/process/: context.rs  manager.rs  mod.rs  process.rs
kernel/src/trap/: mod.rs  page_fault.rs  syscall.rs
user/src/: lib.rs  print.rs  syscall_internal.rs
utils/: symbols.S.py  symbols_gen.rs.py
